fix the display of the comments section on small displays

--- a/src/views/CommentsView/CommentsView.style.scss
+++ b/src/views/CommentsView/CommentsView.style.scss
@@ -3,10 +3,12 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-
+  width: 100%;
 }
 
 .comment {
+  display: flex;
+  flex-direction: column;
   background: rgb(var(--v-theme-surface));
   box-shadow: 0 0 10px rgb(var(--v-theme-shadow-lg));
   padding: 10px;
